# twitter-stock-market-aws

./: .gitignore  main.tf  pyproject.toml  variables.tf
scripts/: glue_job.py
terraform_modules/glue_job/: main.tf  policies.tf  variables.tf
terraform_modules/s3_bucket/: variables.tf
terraform_modules/step_functions/: main.tf  policies.tf  variables.tf
