[tool.poetry]
name = "twitter-stock-market-aws"
version = "0.1.0"
description = ""
authors = ["pirocheto <pirocheto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.43"

[tool.poetry.group.stock_market_producer.dependencies]
finnhub-python = "^2.4.19"
urllib3 = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
